# Sat-Sim-pytorch

./: .gitignore  README.md  pyproject.toml  setup.py  test.py  torch_test.py
algo/: constants.py  make_config.py  run_controller_test.py  run_controller_train.py  test_simulator_loop.py
algo/algorithm/: controller_trainer.py  model.py  policy.py  utils.py
algo/algorithm/enviroment/: attitude_control.py  enviroment.py  task_manager.py
algo/satellite/: __init__.py  components.py  constellation.py
architecture/: simulation_clock.py  simulation_module.py  simulator.py  state_manager.py
example/: config.json  config.py  example.py  simulation.py  simulator.py
icml/: run_sample_enviroment.py
icml/satellite/: components.py  constellation.py
modules/: example.py  simpleBattery.py
satsim/architecture/: __init__.py  constants.py  module.py  timer.py
satsim/attitude_control/: __init__.py  mrp_feedback.py  mrp_steering.py  rate_servo_full_linear.py
satsim/attitude_guidance/: __init__.py  hill_point.py  inertial_3d.py  location_pointing.py  velocity_point.py
satsim/data/: __init__.py  constellations.py  orbits.py
satsim/enviroment/ground_location/: __init__.py  ground_location.py
satsim/enviroment/ground_mapping/: __init__.py  ground_mapping.py
satsim/fsw_algorithm/attitude_tracking_error/: attitude_tracking_error.py
satsim/modules/: example.py
satsim/simulation/: __init__.py
satsim/utils/: __init__.py  lla.py  matrix_support.py  module_support.py  operators.py  orbital_motion.py  test_support.py
tests/: test_encoder.py  test_reaction_wheels.py
(+77 files in other folders)
