[build-system]
requires = [
    "setuptools",
    "torch",
    "spiceypy",
]
build-backend = "setuptools.build_meta"

[project]
name = "SatSim"
requires-python= ">=3.11"
description = "A simulation framework based on pytorch for satellites"
readme = "README.md"
dynamic = ["version","dependencies"]

[tool.pytest.ini_options]
testpaths = ["satsim/*/*/unit_test/", "tests/"]
pythonpath = ["src"]

[project.urls]
Repository = "https://github.com/MessiXiang/Sat-Sim-pytorch.git"
Issues = "https://github.com/MessiXiang/Sat-Sim-pytorch/issues"
